--- a/client/src/components/Notes/Note.module.scss
+++ b/client/src/components/Notes/Note.module.scss
@@ -38,15 +38,19 @@
   
   .content {
     flex-grow: 1;
-    margin: 2.5% 2.5% 0 2.5%;
-    padding: 0 5% 5% 5%;
-    box-sizing: border-box;
+    margin: 2% 4% 0 4%;
     white-space: pre;
     overflow: auto;
     font-size: 16px;
 
+    &::-webkit-scrollbar-corner ,&::-webkit-scrollbar-thumb {
+      visibility: hidden;
+    }
+
     &:hover {
-      overflow: auto;
+      &::-webkit-scrollbar-thumb {
+        visibility: visible;
+      }
     }
   }
 
@@ -102,17 +106,17 @@
 
 /* Desktop Only */
 @media (pointer:fine) {
-  .content {
-    overflow: hidden;
-    
-    &::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      border-radius: 6px;
-      background: #999;
+  .note {
+    .content {
+      &::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+      }
+  
+      &::-webkit-scrollbar-thumb {
+        border-radius: 8px;
+        background: #999;
+      }
     }
   }
 }
